# embodied-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: coordinate.md  ds.py  filters.md  transforms.md
embdata/: __init__.py  actor.py  array.py  coordinate.py  describe.py  list.py  multi_sample.py  ndarray.py  sample.py  units.py
embdata/geometry/: __init__.py  affine.py  example.py  pca.py  quaternion.py  transform_lookup.py  utils.py
embdata/motion/: __init__.py  control.py  motion.py
embdata/sense/: aruco.py  camera.py  camera_config.py  depth.py  image.py  visualize.py  world.py  world_object.py
embdata/sense/filters/: cluster.py  config.py  downsample.py  filter.py  fusion.py  kdtree_filter.py  outlier_rejection_filter.py  rejection.py  segmentation.py
embdata/utils/: cache_utils.py  camera_utils.py  counting.py  custom_logger.py  docs.py  dynamic.py  geometry_utils.py  image_utils.py  import_utils.py  iter_utils.py  safe_print.py  schema_utils.py  space_utils.py  timing.py
embdata/utils/hooks/: __init__.py  datasets.py  gym.py  torch.py
tests/: test_camera.py  test_coordinate.py  test_depth.py  test_geometry.py  test_geometry_utils.py  test_image.py  test_ndarray.py  test_pca.py  test_sample.py  test_sample_flatten.py  test_sample_schema.py  test_world.py
